[gd_scene load_steps=3 format=3 uid="uid://wv26vmv6tnp1"]

[ext_resource type="Theme" uid="uid://c521sxmdt64pl" path="res://addons/UDSEngine/Database_Manager/Theme and Style/main_30.tres" id="1_43kt7"]
[ext_resource type="Script" path="res://addons/UDSEngine/Example Game/LoadGameMenu.gd" id="2"]

[node name="LoadGameMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource("1_43kt7")
script = ExtResource("2")

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 1)

[node name="VBox1" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HBox1" type="HBoxContainer" parent="VBox1"]
offset_right = 900.0
offset_bottom = 31.0

[node name="ReturnToTitle" type="Button" parent="VBox1/HBox1"]
offset_right = 210.0
offset_bottom = 31.0
text = "Return to Title Screen"

[node name="Label" type="Label" parent="VBox1/HBox1"]
offset_left = 214.0
offset_right = 900.0
offset_bottom = 31.0
size_flags_horizontal = 3
text = "Select Save Game to Load"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Scroll1" type="ScrollContainer" parent="VBox1"]
offset_top = 35.0
offset_right = 900.0
offset_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBox1" type="VBoxContainer" parent="VBox1/Scroll1"]
offset_right = 900.0
size_flags_horizontal = 3

[connection signal="button_up" from="VBox1/HBox1/ReturnToTitle" to="." method="_on_ReturnToTitle_button_up"]
